fix scroll issue on mobile when overlay happens or chat box appear

--- a/src/style/components/_chat.scss
+++ b/src/style/components/_chat.scss
@@ -12,6 +12,14 @@
   width    : 100%;
   height   : 100%;
   background-color: white;
+  @include bp('sm') {
+    left   : auto;
+    top    : auto;
+    right  : 3vw;
+    bottom : 130px;
+    height : 420px;
+    width  : 370px;
+  }
 
   .chat-room {
     position : absolute;
